// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List component with children props 1`] = `
<ul
  className="MuiList-root-1 MuiList-padding-2"
  style={undefined}
>
  <div>
    Hello
  </div>
</ul>
`;

exports[`List component with style props 1`] = `
<ul
  className="MuiList-root-1 MuiList-padding-2"
  style={
    Object {
      "width": 100,
    }
  }
/>
`;

exports[`ListItem  with children props 1`] = `
<li
  className="MuiListItem-root-11 MuiListItem-default-14 MuiListItem-gutters-19"
  disabled={false}
  onClick={undefined}
  style={undefined}
>
  <div
    className="MuiListItemText-root-23"
    style={Object {}}
  >
    <span
      className="MuiTypography-root-29 MuiTypography-subheading-36 MuiListItemText-primary-26"
    >
      Hello
    </span>
  </div>
</li>
`;

exports[`ListItem with   style props 1`] = `
<li
  className="MuiListItem-root-11 MuiListItem-default-14 MuiListItem-gutters-19"
  disabled={false}
  onClick={undefined}
  style={
    Object {
      "width": 100,
    }
  }
/>
`;

exports[`ListItem with primary props 1`] = `
<li
  className="MuiListItem-root-11 MuiListItem-default-14 MuiListItem-gutters-19"
  disabled={false}
  onClick={undefined}
  primary="hello"
  style={undefined}
>
  <div
    className="MuiListItemText-root-23"
    style={Object {}}
  >
    <span
      className="MuiTypography-root-29 MuiTypography-subheading-36 MuiListItemText-primary-26"
    >
      hello
    </span>
    <p
      className="MuiTypography-root-29 MuiTypography-body1-38 MuiTypography-colorTextSecondary-62 MuiListItemText-secondary-27"
    >
      
    </p>
  </div>
  <div
    className="MuiListItemText-root-23"
    style={Object {}}
  >
    <span
      className="MuiTypography-root-29 MuiTypography-subheading-36 MuiListItemText-primary-26"
    >
      Hello
    </span>
  </div>
</li>
`;

exports[`ListItem with secondary props 1`] = `
<li
  className="MuiListItem-root-11 MuiListItem-default-14 MuiListItem-gutters-19"
  disabled={false}
  onClick={undefined}
  secondary="Hi"
  style={undefined}
>
  <div
    className="MuiListItemText-root-23"
    style={Object {}}
  >
    <span
      className="MuiTypography-root-29 MuiTypography-subheading-36 MuiListItemText-primary-26"
    >
      
    </span>
    <p
      className="MuiTypography-root-29 MuiTypography-body1-38 MuiTypography-colorTextSecondary-62 MuiListItemText-secondary-27"
    >
      Hi
    </p>
  </div>
  <div
    className="MuiListItemText-root-23"
    style={Object {}}
  >
    <span
      className="MuiTypography-root-29 MuiTypography-subheading-36 MuiListItemText-primary-26"
    >
      Hello
    </span>
  </div>
</li>
`;

exports[`ListSuheader with children props 1`] = `
<li
  className="MuiListSubheader-root-5 MuiListSubheader-sticky-10 MuiListSubheader-gutters-8"
>
  I am Header of list
</li>
`;
